// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ServiceDependenciesLegend Tests should render ServiceDependenciesLegend component with correct labels 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main container StyledProps--background-primary1"
  >
    <div
      class="StyledProps--font StyledProps--main serviceStatesContainer"
    >
      <div
        class="StyledProps--font StyledProps--main StyledProps--flex StyledProps--padding-top-xsmall StyledProps--padding-right-xsmall"
      >
        <div
          class="StyledProps--font StyledProps--main serviceState"
        />
        <p
          class="StyledProps--font StyledProps--main StyledProps--margin-right-small StyledProps--font-size-xsmall"
        >
          cv.monitoredServices.serviceHealth.serviceDependencies.states.unhealthy
        </p>
      </div>
      <div
        class="StyledProps--font StyledProps--main StyledProps--flex StyledProps--padding-top-xsmall StyledProps--padding-right-xsmall"
      >
        <div
          class="StyledProps--font StyledProps--main serviceState"
        />
        <p
          class="StyledProps--font StyledProps--main StyledProps--margin-right-small StyledProps--font-size-xsmall"
        >
          cv.monitoredServices.serviceHealth.serviceDependencies.states.needsAttention
        </p>
      </div>
      <div
        class="StyledProps--font StyledProps--main StyledProps--flex StyledProps--padding-top-xsmall StyledProps--padding-right-xsmall"
      >
        <div
          class="StyledProps--font StyledProps--main serviceState"
        />
        <p
          class="StyledProps--font StyledProps--main StyledProps--margin-right-small StyledProps--font-size-xsmall"
        >
          cv.monitoredServices.serviceHealth.serviceDependencies.states.observe
        </p>
      </div>
      <div
        class="StyledProps--font StyledProps--main StyledProps--flex StyledProps--padding-top-xsmall StyledProps--padding-right-xsmall"
      >
        <div
          class="StyledProps--font StyledProps--main serviceState"
        />
        <p
          class="StyledProps--font StyledProps--main StyledProps--margin-right-small StyledProps--font-size-xsmall"
        >
          cv.monitoredServices.serviceHealth.serviceDependencies.states.healthy
        </p>
      </div>
      <div
        class="StyledProps--font StyledProps--main StyledProps--flex StyledProps--padding-top-xsmall StyledProps--padding-right-xsmall"
      >
        <div
          class="StyledProps--font StyledProps--main serviceState"
        />
        <p
          class="StyledProps--font StyledProps--main StyledProps--margin-right-small StyledProps--font-size-xsmall"
        >
          na
        </p>
      </div>
    </div>
    <div
      class="StyledProps--font StyledProps--main serviceTypesContainer"
    >
      <div
        class="StyledProps--font StyledProps--main StyledProps--flex"
      >
        <span
          class="bp3-icon StyledProps--main StyledProps--padding-left-xsmall StyledProps--padding-right-xsmall"
          data-icon="dependency-default-icon"
        >
          <svg
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M.802.35h0a.49.49 0 01.042 0h6.133a.491.491 0 01.491.491v6.136a.49.49 0 01-.49.491h0H.84h0a.49.49 0 01-.347-.143M.802.35L.599 7.22l-.105.106s0 0 0 0M.802.35L.795.351h.007zM.494 7.325a.49.49 0 01-.144-.348m.144.348L.35 6.977m0 0h0V.842v0H.5L.35 6.976zM8.984.351h0l-.302.49h-.15v0s0 0 0 0v6.136a.491.491 0 00.49.491h6.137a.49.49 0 00.491-.49V.84v0a.49.49 0 00-.144-.347h0A.491.491 0 0015.16.35h0-6.133a.49.49 0 00-.042 0zM.802 8.532h0l-.302.49H.35V15.16h0a.491.491 0 00.49.491h6.137a.491.491 0 00.491-.49V9.022v0a.49.49 0 00-.49-.491h0H.843a.49.49 0 00-.042 0zm.53-7.2h5.154v5.155H1.332V1.332zm8.182 0h5.154v5.155H9.514V1.332zm2.577 7.195a3.569 3.569 0 00-3.56 3.564 3.564 3.564 0 003.56 3.559 3.564 3.564 0 003.559-3.559 3.569 3.569 0 00-3.56-3.564zm-10.76.987h5.155v5.154H1.332V9.514zm10.76 0a2.572 2.572 0 012.577 2.577 2.568 2.568 0 01-2.577 2.572 2.568 2.568 0 01-2.577-2.572 2.572 2.572 0 012.577-2.577z"
              fill="currentColor"
              stroke="currentColor"
              stroke-width="0.3"
            />
          </svg>
        </span>
        <p
          class="StyledProps--font StyledProps--main StyledProps--margin-right-small StyledProps--font-size-xsmall"
        >
          Application
        </p>
      </div>
      <div
        class="StyledProps--font StyledProps--main StyledProps--flex"
      >
        <span
          class="bp3-icon StyledProps--main StyledProps--padding-left-xsmall StyledProps--padding-right-xsmall"
          data-icon="infrastructure"
        >
          <svg
            height="22"
            viewBox="0 0 16 16"
            width="22"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M12.543 5.377L8 2.755 3.458 5.377v5.246L8 13.245l4.543-2.622V5.377zM8.5 1.89a1 1 0 00-1 0L2.958 4.51a1 1 0 00-.5.866v5.246a1 1 0 00.5.866L7.5 14.11a1 1 0 001 0l4.543-2.622a1 1 0 00.5-.866V5.377a1 1 0 00-.5-.866L8.5 1.89z"
              fill="currentColor"
              fill-rule="evenodd"
            />
            <path
              clip-rule="evenodd"
              d="M10.233 6.71L8 5.422l-2.233 1.29V9.29L8 10.58l2.233-1.29V6.711zM8.5 4.556a1 1 0 00-1 0l-2.233 1.29a1 1 0 00-.5.866V9.29a1 1 0 00.5.866l2.233 1.29a1 1 0 001 0l2.233-1.29a1 1 0 00.5-.866V6.711a1 1 0 00-.5-.866L8.5 4.555z"
              fill="currentColor"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <p
          class="StyledProps--font StyledProps--main StyledProps--margin-right-small StyledProps--font-size-xsmall"
        >
          Infrastructure
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`ServiceDependenciesLegend Tests should render ServiceDependenciesLegend without ServiceType legend 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main container StyledProps--background-primary1"
  >
    <div
      class="StyledProps--font StyledProps--main serviceStatesContainer"
    >
      <div
        class="StyledProps--font StyledProps--main StyledProps--flex StyledProps--padding-top-xsmall StyledProps--padding-right-xsmall"
      >
        <div
          class="StyledProps--font StyledProps--main serviceState"
        />
        <p
          class="StyledProps--font StyledProps--main StyledProps--margin-right-small StyledProps--font-size-xsmall"
        >
          cv.monitoredServices.serviceHealth.serviceDependencies.states.unhealthy
        </p>
      </div>
      <div
        class="StyledProps--font StyledProps--main StyledProps--flex StyledProps--padding-top-xsmall StyledProps--padding-right-xsmall"
      >
        <div
          class="StyledProps--font StyledProps--main serviceState"
        />
        <p
          class="StyledProps--font StyledProps--main StyledProps--margin-right-small StyledProps--font-size-xsmall"
        >
          cv.monitoredServices.serviceHealth.serviceDependencies.states.needsAttention
        </p>
      </div>
      <div
        class="StyledProps--font StyledProps--main StyledProps--flex StyledProps--padding-top-xsmall StyledProps--padding-right-xsmall"
      >
        <div
          class="StyledProps--font StyledProps--main serviceState"
        />
        <p
          class="StyledProps--font StyledProps--main StyledProps--margin-right-small StyledProps--font-size-xsmall"
        >
          cv.monitoredServices.serviceHealth.serviceDependencies.states.observe
        </p>
      </div>
      <div
        class="StyledProps--font StyledProps--main StyledProps--flex StyledProps--padding-top-xsmall StyledProps--padding-right-xsmall"
      >
        <div
          class="StyledProps--font StyledProps--main serviceState"
        />
        <p
          class="StyledProps--font StyledProps--main StyledProps--margin-right-small StyledProps--font-size-xsmall"
        >
          cv.monitoredServices.serviceHealth.serviceDependencies.states.healthy
        </p>
      </div>
      <div
        class="StyledProps--font StyledProps--main StyledProps--flex StyledProps--padding-top-xsmall StyledProps--padding-right-xsmall"
      >
        <div
          class="StyledProps--font StyledProps--main serviceState"
        />
        <p
          class="StyledProps--font StyledProps--main StyledProps--margin-right-small StyledProps--font-size-xsmall"
        >
          na
        </p>
      </div>
    </div>
  </div>
</div>
`;
